@@ -60,6 +60,7 @@ a{color:#881102;text-decoration:none}
 a:focus,a:hover{color:#41402b}
 body{background-color:#569220;color:#41402b}
 code{color:#569220}
+form{overflow:hidden}
 h1,h2,h3,h4,h5,h6{font-weight:300;font-family:"Roboto Slab","Times New Roman","Times","serif"}
 h1{font-size:32px;line-height:36px}
 h2{font-size:28px;line-height:36px}
