@@ -126,6 +126,7 @@ a     { color: @contrast; text-decoration: none; }
 a:focus, a:hover { color: @text; }
 body  { background-color: @light; color: @text; }
 code  { color: @light; }
+form { overflow: hidden; }
 h1, h2, h3, h4, h5, h6 { .serif-book; }
 h1 { font-size: 32px; line-height: 36px; }
 h2 { font-size: 28px; line-height: 36px; }
